--- a/novaspay-admin/.env
+++ b/novaspay-admin/.env
@@ -1,3 +1,4 @@
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=http://localhost:5000/admin
+VITE_AUTH_API_URL=http://localhost:5000
 # VITE_API_URL_PUBLIC=http://127.0.0.1:8000/storage/
 VITE_TINYMCE_API_KEY=sp4r69rnito20qfyayd5gddfg5xezivjavh61lnku53oan7o
