--- a/novaspay-frontend/package.json
+++ b/novaspay-frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.12.2",
     "lucide-react": "^0.544.0",
     "path": "^0.12.7",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
