--- a/novaspay-client/package.json
+++ b/novaspay-client/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.12.2",
+    "element-react": "^1.4.34",
     "lucide-react": "^0.544.0",
     "path": "^0.12.7",
     "react": "^19.1.1",
