--- a/novaspay-client/package.json
+++ b/novaspay-client/package.json
@@ -16,7 +16,9 @@
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.12.2",
+    "dom-to-image": "^2.6.0",
     "element-react": "^1.4.34",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "path": "^0.12.7",
     "react": "^19.1.1",
@@ -24,12 +26,14 @@
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
+    "react-to-print": "^3.1.1",
     "sonner": "^2.0.7",
     "tailwindcss": "^4.1.13",
     "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/dom-to-image": "^2.6.7",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
