--- a/novaspay-backend/.env
+++ b/novaspay-backend/.env
@@ -3,3 +3,7 @@ JWT_SECRET="qEGz0vqtL9OXyF+7glRIRL5YfuE09gxeFB4HY/Y2azk="
 
 EMAIL_USER="abdullah.khalil123321@gmail.com"
 EMAIL_PASS="ziiz fpdu lyzn dkvz"
+
+ADMIN_URL="http://localhost:5173"
+CLIENT_URL="http://localhost:3157"
+SUPER_ADMIN_URL="http://localhost:4000"
